k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-assistant
  labels:
    name: product-assistant
